# terraform-wrapper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  release-plz.toml  terraform-wrapper-design.md
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  dependencies.yml  quick-check.yml
examples/: config_builder.rs  ec2_instance.rs  gce_instance.rs  streaming_apply.rs  validate_and_fmt.rs  workspace_management.rs
examples/ec2-instance/: main.tf  outputs.tf  variables.tf
examples/gce-instance/: main.tf  outputs.tf  variables.tf
src/: command.rs  config.rs  error.rs  exec.rs  lib.rs  prelude.rs  streaming.rs
src/commands/: apply.rs  destroy.rs  fmt.rs  force_unlock.rs  get.rs  graph.rs  import.rs  init.rs  mod.rs  modules.rs  output.rs  plan.rs  providers.rs  raw.rs  refresh.rs  show.rs  state.rs  test.rs  validate.rs  version.rs  workspace.rs
src/types/: mod.rs  output.rs  plan.rs  state.rs  validation.rs  version.rs
tests/: lifecycle.rs  version.rs
