[package]
name = "terraform-wrapper"
version = "0.4.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "A type-safe Terraform CLI wrapper for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/terraform-wrapper"
documentation = "https://docs.rs/terraform-wrapper"
keywords = ["terraform", "infrastructure", "iac", "cli", "wrapper"]
categories = ["development-tools", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["json"]
json = ["serde", "serde_json"]
config = ["json", "tempfile"]

[dependencies]
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "time"] }
thiserror = "2.0"
tracing = "0.1"
which = "8.0"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tempfile = { version = "3.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "time"] }
serde_json = "1.0"
tempfile = "3.0"
